--- a/[Baseline]_Efficientnet B0을 활용한 Multi-Label Classification.ipynb
+++ b/[Baseline]_Efficientnet B0을 활용한 Multi-Label Classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "2b0d9b68-7102-4eca-9543-3b9b8acafc6e",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import numpy as np\n",
     "import os\n",
     "import cv2\n",
+    "\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "d13862e3-bb27-47af-9b58-a9fbf804df71",
    "metadata": {},
    "outputs": [],
@@ -58,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "c3367399-9798-4e38-967b-fd2320b9a2b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "CFG = {\n",
     "    'IMG_SIZE':400,\n",
-    "    'EPOCHS':8,\n",
+    "    'EPOCHS':400,\n",
     "    'LEARNING_RATE':1e-4,\n",
     "    'BATCH_SIZE':32,\n",
     "    'SEED':41\n",
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "101a714b-71b6-4475-a4ce-fa5f98bc2731",
    "metadata": {},
    "outputs": [],
@@ -96,7 +97,19 @@
     "    torch.backends.cudnn.deterministic = True\n",
     "    torch.backends.cudnn.benchmark = True\n",
     "\n",
-    "seed_everything(CFG['SEED']) # Seed 고정"
+    "seed_everything(CFG['SEED']) # Seed 고정\n",
+    "\n",
+    "def get_currentTime():\n",
+    "    from datetime import date, datetime, timezone, timedelta\n",
+    "\n",
+    "    exp_day = str(date.today())\n",
+    "\n",
+    "    KST = timezone(timedelta(hours=9))\n",
+    "    time_record = datetime.now(KST)\n",
+    "    _day = str(time_record)[:10]\n",
+    "    _time = str(time_record.time())[:8]\n",
+    "\n",
+    "    return _day"
    ]
   },
   {
@@ -137,7 +150,7 @@
    "outputs": [],
    "source": [
     "df = df.sample(frac=1)\n",
-    "train_len = int(len(df) * 0.9)"
+    "train_len = int(len(df) * 0.99)"
    ]
   },
   {
@@ -191,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "16fd60a5-24e2-4539-bfd0-1c374a641699",
    "metadata": {},
    "outputs": [],
@@ -251,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "c01b4067-0669-44a9-bbbc-3065d8cb00c2",
    "metadata": {},
    "outputs": [],
@@ -259,10 +272,13 @@
     "train_transform = A.Compose([\n",
     "                            A.Resize(CFG['IMG_SIZE'],CFG['IMG_SIZE']),\n",
     "                            # A.RandomCrop(width=CFG['IMG_SIZE'], height=CFG['IMG_SIZE']),\n",
-    "                            A.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225), max_pixel_value=255.0, always_apply=False, p=1.0),\n",
-    "                            A.HorizontalFlip(),\n",
+    "                            A.ShiftScaleRotate(shift_limit=0.05, scale_limit=0.05, rotate_limit=15, p=0.5),\n",
+    "                            A.RGBShift(r_shift_limit=15, g_shift_limit=15, b_shift_limit=15, p=0.5),\n",
+    "                            A.GaussNoise(var_limit=(0, 20)),\n",
     "                            A.Rotate(limit=10, interpolation=1, border_mode=4, value=None, mask_value=None, rotate_method='largest_box', crop_border=False, always_apply=False, p=0.5),\n",
     "                            A.RandomBrightnessContrast(p=0.2),\n",
+    "                            A.HorizontalFlip(),\n",
+    "                            A.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225), max_pixel_value=255.0, always_apply=False, p=1.0),\n",
     "                            ToTensorV2()\n",
     "                            ])\n",
     "\n",
@@ -276,10 +292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "9d880481-1965-499d-9caa-fdfa8526f789",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'function' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train_dataset \u001b[39m=\u001b[39m CustomDataset(train[\u001b[39m'\u001b[39;49m\u001b[39mimg_path\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mvalues, train_labels, bg_img_list, train_transform)\n\u001b[0;32m      2\u001b[0m train_loader \u001b[39m=\u001b[39m DataLoader(train_dataset, batch_size \u001b[39m=\u001b[39m CFG[\u001b[39m'\u001b[39m\u001b[39mBATCH_SIZE\u001b[39m\u001b[39m'\u001b[39m], shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, num_workers\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m      4\u001b[0m val_dataset \u001b[39m=\u001b[39m CustomDataset(val[\u001b[39m'\u001b[39m\u001b[39mimg_path\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalues, val_labels, bg_img_list, test_transform)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'function' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "train_dataset = CustomDataset(train['img_path'].values, train_labels, bg_img_list, train_transform)\n",
     "train_loader = DataLoader(train_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=True, num_workers=0)\n",
@@ -331,53 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "a17df6b3-16c9-44dd-b0fd-ffb501fee749",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train(model, optimizer, train_loader, val_loader, scheduler, device):\n",
-    "    model.to(device)\n",
-    "    criterion = nn.BCELoss().to(device)\n",
-    "    \n",
-    "    best_val_acc = 0\n",
-    "    best_model = None\n",
-    "    \n",
-    "    for epoch in range(1, CFG['EPOCHS']+1):\n",
-    "        model.train()\n",
-    "        train_loss = []\n",
-    "        for imgs, labels in tqdm(iter(train_loader)):\n",
-    "            imgs = imgs.float().to(device)\n",
-    "            labels = labels.to(device)\n",
-    "            \n",
-    "            optimizer.zero_grad()\n",
-    "            \n",
-    "            output = model(imgs)\n",
-    "            loss = criterion(output, labels)\n",
-    "            \n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            \n",
-    "            train_loss.append(loss.item())\n",
-    "                    \n",
-    "        _val_loss, _val_acc = validation(model, criterion, val_loader, device)\n",
-    "        _train_loss = np.mean(train_loss)\n",
-    "        print(f'Epoch [{epoch}], Train Loss : [{_train_loss:.5f}] Val Loss : [{_val_loss:.5f}] Val ACC : [{_val_acc:.5f}]')\n",
-    "        \n",
-    "        if scheduler is not None:\n",
-    "            scheduler.step(_val_acc)\n",
-    "            \n",
-    "        if best_val_acc < _val_acc:\n",
-    "            best_val_acc = _val_acc\n",
-    "            best_model = model\n",
-    "    \n",
-    "    return best_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "24a0bf01-27cd-4faf-93b1-3aa8a37be01c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +388,50 @@
     "        _val_loss = np.mean(val_loss)\n",
     "        _val_acc = np.mean(val_acc)\n",
     "    \n",
-    "    return _val_loss, _val_acc"
+    "    return _val_loss, _val_acc\n",
+    "    \n",
+    "def train(model, optimizer, train_loader, val_loader, scheduler, device):\n",
+    "    model.to(device)\n",
+    "    criterion = nn.BCELoss().to(device)\n",
+    "    \n",
+    "    best_val_acc = 1000\n",
+    "    best_model = None\n",
+    "    \n",
+    "    for epoch in range(1, CFG['EPOCHS']+1):\n",
+    "        model.train()\n",
+    "        train_loss = []\n",
+    "        for imgs, labels in tqdm(iter(train_loader)):\n",
+    "            imgs = imgs.float().to(device)\n",
+    "            labels = labels.to(device)\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "            output = model(imgs)\n",
+    "            loss = criterion(output, labels)\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            train_loss.append(loss.item())\n",
+    "                    \n",
+    "        _val_loss, _val_acc = validation(model, criterion, val_loader, device)\n",
+    "        _train_loss = np.mean(train_loss)\n",
+    "        print(f'Epoch [{epoch}], Train Loss : [{_train_loss:.5f}]')\n",
+    "        \n",
+    "        # if scheduler is not None:\n",
+    "        #     scheduler.step(_val_acc)\n",
+    "            \n",
+    "        if best_val_acc > _train_loss:\n",
+    "            best_val_acc = _train_loss\n",
+    "            best_model = model\n",
+    "\n",
+    "            now_day = get_currentTime()\n",
+    "            save_path = './archive/'\n",
+    "            torch.save(best_model.state_dict(), f'{save_path}{now_day}_epoch{epoch}.pt')\n",
+    "\n",
+    "            \n",
+    "    \n",
+    "    return best_model"
    ]
   },
   {
@@ -681,26 +707,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a0ac402e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_currentTime():\n",
-    "    from datetime import date, datetime, timezone, timedelta\n",
-    "\n",
-    "    exp_day = str(date.today())\n",
-    "\n",
-    "    KST = timezone(timedelta(hours=9))\n",
-    "    time_record = datetime.now(KST)\n",
-    "    _day = str(time_record)[:10]\n",
-    "    _time = str(time_record.time())[:8]\n",
-    "\n",
-    "    return _day"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "id": "dd24b98d-1ac7-46df-a833-16d4cb57ac04",
    "metadata": {},
@@ -708,7 +714,7 @@
    "source": [
     "save_path = './prediction/'\n",
     "exp_day = get_currentTime()\n",
-    "exp_label = 'effi_b0, (400, bgSyn, test False)'\n",
+    "exp_label = 'effi_b0, (400, bgSyn, test False, epoch-400, mean last)'\n",
     "extension = '.csv'\n",
     "submit.to_csv(f'{save_path}{exp_day}__{exp_label}{extension}', index=False)"
    ]
@@ -742,7 +748,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "258654ca23036da63859f8666a9416c31e8a914bb839120ed818cfa2ceba88d0"
+    "hash": "2afe5adcac51d02a2e1812bcf61b8667819276e0f44a7370b1e04a47e62fa1fb"
    }
   }
  },
