fixed the paths

--- a/DACON/Carcarsh_video_classification/3dConv, Video classfication.ipynb
+++ b/DACON/Carcarsh_video_classification/3dConv, Video classfication.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "2b0d9b68-7102-4eca-9543-3b9b8acafc6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/Vision/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import pandas as pd\n",
@@ -46,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')"
+    "device = torch.device('cuda:1') if torch.cuda.is_available() else torch.device('cpu')"
    ]
   },
   {
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "c3367399-9798-4e38-967b-fd2320b9a2b2",
    "metadata": {},
    "outputs": [],
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "101a714b-71b6-4475-a4ce-fa5f98bc2731",
    "metadata": {},
    "outputs": [],
@@ -111,12 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "a62c78cd-4f40-4e98-b8a6-1b6f1d906b4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./train.csv')"
+    "df = pd.read_csv('/root/Competitions/DACON/Carcarsh_video_classification/data/train.csv')"
    ]
   },
   {
@@ -129,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "e6264d0c-597c-42ac-9f3a-7189a5883028",
    "metadata": {},
    "outputs": [],
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "16fd60a5-24e2-4539-bfd0-1c374a641699",
    "metadata": {},
    "outputs": [],
@@ -171,6 +180,7 @@
     "    \n",
     "    def get_video(self, path):\n",
     "        frames = []\n",
+    "        path =  f'/root/Competitions/DACON/Carcarsh_video_classification/data/{path[2:]}'\n",
     "        cap = cv2.VideoCapture(path)\n",
     "        for _ in range(CFG['VIDEO_LENGTH']):\n",
     "            _, img = cap.read()\n",
@@ -182,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "9d880481-1965-499d-9caa-fdfa8526f789",
    "metadata": {},
    "outputs": [],
@@ -204,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "3664c4d0-f1f2-4971-9090-4d6ee66309ae",
    "metadata": {},
    "outputs": [],
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "id": "a17df6b3-16c9-44dd-b0fd-ffb501fee749",
    "metadata": {},
    "outputs": [],
@@ -295,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "id": "24a0bf01-27cd-4faf-93b1-3aa8a37be01c",
    "metadata": {},
    "outputs": [],
@@ -335,360 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "id": "86142d9a-68b7-4d04-8423-49d28025411d",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9d094f526814045a874f2ea44884b8f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f13130f89fb4a8da0851f32853b1911",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch [1], Train Loss : [1.19320] Val Loss : [0.84035] Val F1 : [0.17415]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a1d1d0ecd7644b1b777e1472d56af6c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f013c8c76dde41268d4fc86b4c30fb4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [2], Train Loss : [0.81481] Val Loss : [0.82093] Val F1 : [0.14764]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f557751385e4e17b5c2a78776dccca7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a8315c4176e42998b7837e81dbb8d5f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [3], Train Loss : [0.67688] Val Loss : [0.86664] Val F1 : [0.17513]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09ea00cbe3cb4c7f8725cd43cbd5db6a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "419cbfa6b18841019ccb82dfacb81d45",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [4], Train Loss : [0.58352] Val Loss : [0.74625] Val F1 : [0.19725]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d7296b721b74dc086ba01454e6b55c5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33906f154dcb444888feca3fc983ca72",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [5], Train Loss : [0.54920] Val Loss : [0.70031] Val F1 : [0.25826]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b5c63cf4a0c4f81b2decf3c38c87088",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "629731323f9e4d3caa1f0b83ab70f06a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [6], Train Loss : [0.44310] Val Loss : [0.83487] Val F1 : [0.22833]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bc1a8043c954a99a1a84ba29cf4b744",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "120de1a6ce584af0a378d2bf5feae6c7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [7], Train Loss : [0.43336] Val Loss : [0.73283] Val F1 : [0.25514]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "994c2c8df17044188a49f9ffd1e502aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19751171d7734f1bb68f5b87fe8443a9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [8], Train Loss : [0.31338] Val Loss : [0.73576] Val F1 : [0.27844]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc428d7c8556496c9dcda94aa0d3d759",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fde2d51251af49d68a95b35580e102dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [9], Train Loss : [0.29651] Val Loss : [0.66884] Val F1 : [0.25082]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d4c1f8821a849dead3d8578debee763",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/540 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5906d1042b4043b99e8849fcc5a0d17c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/135 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [10], Train Loss : [0.23802] Val Loss : [0.79714] Val F1 : [0.26478]\n"
+      "  0%|          | 0/540 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -711,17 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "0498feef-9ca7-42ea-b73a-51a06dd4c684",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('./test.csv')"
+    "test = pd.read_csv('/root/Competitions/DACON/Carcarsh_video_classification/data/test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "a1bc676a-5216-4e1a-ac2c-3e940e8a3909",
    "metadata": {},
    "outputs": [],
@@ -732,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "acc072b1-3749-4a0a-8c3b-80ef39a2fd56",
    "metadata": {},
    "outputs": [],
@@ -753,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "9fcce1a1-995c-403b-9229-f4253dd5c702",
    "metadata": {},
    "outputs": [
@@ -786,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "95107b25-7d4b-423f-90ce-849c6f4a46c0",
    "metadata": {},
    "outputs": [],
@@ -796,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "c7d82083-af35-4ba5-957d-1c7451404eab",
    "metadata": {},
    "outputs": [
@@ -876,20 +543,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "dd24b98d-1ac7-46df-a833-16d4cb57ac04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "submit.to_csv('./baseline_submit.csv', index=False)"
+    "submit.to_csv('/root/Competitions/DACON/Carcarsh_video_classification/prediction/baseline_submit.csv', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "eunil_py38",
+   "display_name": "Vision",
    "language": "python",
-   "name": "eunil_py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -901,7 +568,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2be5db867a8e48a5046a648c27c7f3533a04d485c5580f847108a942a2a2f253"
+   }
   }
  },
  "nbformat": 4,
